# LangHire

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TESTING.md  history_export.txt  index.html  package-lock.json  package.json  pyproject.toml  tsconfig.app.json  tsconfig.test.json  vite.config.ts
.git_broken_backup/: COMMIT_EDITMSG  ORIG_HEAD  config  index
.git_broken_backup/refs/: stash
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yml  test.yml
backend/: main.py  models.py  requirements.txt
backend/core/: agent_logger.py  config.py  country_config.py  llm_factory.py  shared_config.py
backend/memory/: __init__.py  extractors.py  metrics.py  store.py
backend/resume/: __init__.py  tailor.py
backend/sources/: __init__.py  (+1 more)
cli/: apply_jobs.py  apply_jobs_tailored.py  collect_jobs.py  dashboard.py  memory_backfill.py  memory_cli.py  memory_demo.py
docs/: README.ar.md  README.de.md  README.es.md  README.fr.md  README.hi.md  README.ja.md  README.ko.md  README.ms.md  README.nl.md  README.pt.md
scripts/: build-all-platforms.sh  build-app.sh  build-backend.ps1  build-backend.sh  build-dmg.sh  build-linux-arm64.sh  build-windows.ps1  integration-test.py
src/: App.test.tsx  App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
tests/: conftest.py
website/: .env.example  .gitignore  astro.config.mjs  package-lock.json  package.json
(+295 files in other folders)
