[project]
name = "job-applicant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.42.84",
    "browser-use>=0.12.6",
    "fastapi>=0.135.3",
    "filelock>=3.25.2",
    "langchain-anthropic>=1.3.1",
    "langchain-aws>=1.4.3",
    "langchain-core>=1.2.28",
    "langchain-openai>=1.1.9",
    "playwright>=1.58.0",
    "pyinstaller>=6.19.0",
    "pymupdf>=1.27.2.2",
    "pyyaml>=6.0.1",
    "uvicorn>=0.44.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-ra -q"

[tool.coverage.run]
branch = true
source = ["backend"]
omit = [
    "*/__init__.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
